# api-deployment-example

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: prod.yml
migrations/: 20230418001048_tables.up.sql
src/: main.rs
